# axtor

./: .gitignore  Clang_r15151_Opencl.patch  LICENSE  Makefile  Makefile.common.in  README  TODO  configure  regenerate_llvm_patches.sh
autoconf/: .gitignore  configure.ac
autoconf/m4/.svn/: all-wcprops  entries
devenv/: module.sh  module.sh~
frontend_wrapper/: .gitignore  Makefile  OCL_FrontendWrapper.cpp  OCL_FrontendWrapper.hpp  OCL_builtins.cpp  builtins.cpp
include/axtor/: Annotations.h  Axtor.h  CommonTypes.h  config.h
include/axtor/ast/: ASTFactory.h  ASTNode.h  BasicNodes.h  ShortCircuitNodes.h
include/axtor/backend/: AddressSpaces.h  AxtorBackend.h
include/axtor/cns/: Bitmask.h  BlockGraph.h  CNS.h  CNSScoring.h  SplitTree.h
include/axtor/console/: CompilerLog.h
include/axtor/intrinsics/: AddressIterator.h  IntrinsicDescriptors.h  PlatformInfo.h  TypeHandler.h  TypeStringBuilder.h
include/axtor/metainfo/: ModuleInfo.h
include/axtor/parsers/: IfParser.h  LoopParser.h  PrimitiveParser.h
include/axtor/pass/: CGIPass.h  CNSPass.h  ExitUnificationPass.h  LoopBranchSeparationPass.h  Normalizer.h  OpaqueTypeRenamer.h  Preparator.h  ReForPass.h  RestructuringPass.h  Serializer.h  SimpleUnswitchPass.h  TargetProvider.h  TrivialReturnSplitter.h
include/axtor/scc/: GraphTypes.h  LLVMGraphBuilder.h  LLVMGraphTypes.h  Tarjan.h
include/axtor/solvers/: NodeSplittingRestruct.h  PredicateRestruct.h  RestructuringProcedure.h
include/axtor/util/: AnalysisStruct.h  Assert.h  BlockCopyTracker.h  ExtractorRegion.h  InstructionIterator.h  MultiValue.h  ResourceGuard.h  SharedContext.h  TextStream.h  Timer.h  WrappedLiteral.h  WrappedOperation.h  llvmBuiltins.h  llvmConstant.h  llvmDebug.h  llvmDomination.h  llvmDuplication.h  llvmInit.h  llvmLoop.h  llvmOptimization.h  llvmShortCuts.h  llvmTools.h  llvmTypeFactory.h  stringutil.h
include/axtor/writer/: PassThroughWriter.h  SyntaxWriter.h
include/axtor_c/: CBackend.h  CModuleInfo.h  CWriter.h  C_Intrinsics.def  OCLEnumValues.h  OCL_Frontend_Intrinsics.def
include/axtor_glsl/: GLSLBackend.h  GLSLCommon.h  GLSLModuleInfo.h  GLSLWriter.h  GLSL_Intrinsics.def  InterpolantIntrinsic.h
include/axtor_ocl/: OCLBackend.h  OCLCommon.h  OCLEnum.h  OCLEnumValues.h  OCLModuleInfo.h  OCLWriter.h  OCL_Frontend_Intrinsics.def  OCL_Intrinsics.def
lib/: Makefile
lib/axtor/: Axtor.cpp  CommonTypes.cpp  Makefile  libAxtor.mk
lib/axtor/ast/: ASTFactory.cpp  ASTNode.cpp  BasicNodes.cpp  Makefile
lib/axtor/backend/: Makefile
lib/axtor/cns/: BlockGraph.cpp  Makefile
lib/axtor/console/: CompilerLog.cpp  Makefile
lib/axtor_c/: CBackend.cpp  CModuleInfo.cpp  CWriter.cpp  libAxtor_C.mk
lib/axtor_glsl/: GLSLBackend.cpp  GLSLModuleInfo.cpp  GLSLWriter.cpp  GLSL_Intrinsics.def  Makefile
lib/axtor_ocl/: Makefile  OCLBackend.cpp  OCLEnum.cpp  OCLModuleInfo.cpp  OCLWriter.cpp  OCL_Frontend_Intrinsics.def  OCL_Intrinsics.def  TODO.txt  libAxtor_OCL.mk
patches/: clang_opencl_patch_r151257.patch  clang_opencl_patch_r151805.patch  clang_opencl_patch_r152028.patch  patch_clang_r156798.patch
runtime/: LOG  Makefile
runtime/include/: Compute_Api.h  Matrices.h  Slang_Api.h  Types.h  glsl_intrinsic_wrapper.h
shaders/: .gitignore  Makefile  build_shader.sh  compile_rsl_shader.sh  test_rsl.sh
tests/: Dump_serializer_pre.bc  test_c.py
tests/src/: arith_int.c  call_1.c  call_2.c  cfg_forloop.c  cfg_if.c  cfg_ifelse.c  cfg_ifelse_shortcut.c  opencl_simple.ll  plain_main.c
tools/: Makefile
tools/axtorIntrinsicHeaders/: Makefile
tools/axtorOCLDriver/: KernelPacketizer.cpp  KernelPacketizer.h  LibraryFunctions.cpp  Makefile  README
tools/extractor/: ArgumentReader.h  Makefile  extractor.cpp  extractor.mk
tools/oclang/: Makefile  oclang.sh
(+60 files in other folders)
